# suxiaoyou

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  DESIGN.md  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json
backend/: .env.example  alembic.ini  pyproject.toml  requirements-release-tools-linux-arm64.txt  requirements-release-tools-linux-x64.txt  requirements-release-tools-macos-arm64.txt  requirements-release-tools-macos-x64.txt  requirements-release-tools-windows-arm64.txt  requirements-release-tools-windows-x64.txt  requirements-release-tools.in  requirements-windows-arm64-build.in  requirements-windows-arm64-build.txt  requirements-windows-arm64-overrides.txt  requirements-windows-arm64-sources.json  requirements-windows-arm64-wheelhouse-approval.json  requirements-windows-arm64.txt  requirements.txt  run.py  suxiaoyou.spec
backend/alembic/: env.py
backend/alembic/versions/: 0001_v073_baseline.py  0002_v080_session_input.py  0003_v080_idempotency_record.py  0004_v083_session_input_language.py  0005_v090_release_boundary.py  0006_v100_security_audit.py  0007_v100_invocation_source.py  0008_v100_session_goal.py  0009_v100_goal_usage_ledger.py  0010_v110_checkpoint_ledger.py  0011_v110_user_office_templates.py  0012_v110_workspace_identity_v2.py
backend/app/: config.py  i18n.py  legacy_data.py  main.py  release_features.py  release_readiness.py  version.py
backend/app/acp/: __init__.py  bridge.py  cli.py  self_test.py  server.py  session_bridge.py  stdio.py
backend/app/agent/: agent.py  permission.py
backend/app/api/: callback_html.py  channels.py  chat.py  config.py  connectors.py  file_versions.py  files.py  fts.py  goals.py  google_auth.py  mcp.py  messages.py  models.py  oauth_redirect.py  office_user_templates.py  office_v2.py  ollama.py  openai_auth.py  openai_compat.py  pdf.py  plugins.py  pptx.py  rapid_mlx.py  remote.py  router.py  runtime_control.py  security.py  session_inputs.py  sessions.py  skills.py  usage.py  workspace_memory.py
backend/app/auth/: credential_store.py  csrf.py  legacy_credentials.py  local.py  middleware.py  private_network.py  token.py  tunnel.py
backend/app/channels/: __init__.py  adapter.py  base.py  config.py  manager.py  registry.py  whatsapp.py
backend/app/connector/: __init__.py  model.py  registry.py
backend/app/data/: connectors.json
backend/app/fts/: index.py
backend/app/hooks/: __init__.py  config.py  dispatcher.py  models.py  registry.py  runner.py  runtime.py  trust.py
backend/app/image_generation/: __init__.py  ledger.py  siliconflow.py
backend/app/mcp/: __init__.py  client.py  local_approval.py  manager.py  oauth.py  token_store.py  tool_wrapper.py
backend/app/memory/: injection.py  workspace_memory_queue.py  workspace_memory_storage.py
backend/app/models/: __init__.py  checkpoint_change.py  goal_run.py  goal_usage_record.py  idempotency_record.py  message.py  office_user_template.py  security_audit_event.py  session.py  session_checkpoint.py  session_goal.py  session_input.py  todo.py  turn_run.py  workspace_instance.py
backend/app/office_rendering/: __init__.py  attested.py  cache.py  deployment.py  errors.py  libreoffice.py  models.py  native_bundle.py  native_sandbox.py  native_sandbox_behavior.py  probe.py  process_runner.py  provider.py  release_identity.py  runtime.py  sandbox.py  service.py
backend/app/office_templates/: __init__.py  bundled.py  errors.py  instantiation.py  models.py  policies.py  registry.py  substitution.py  user.py  validation.py
backend/app/office_validation/: __init__.py  draft.py  errors.py  models.py  orchestrator.py  precommit.py  precommit_repair.py  repair_agent.py  runtime.py  startup.py  structure.py  visual.py
backend/app/plugin/: __init__.py  converter.py  loader.py  manager.py  parser.py
backend/app/provider/: anthropic_provider.py  base.py  catalog.py  deferred.py  factory.py  gemini_provider.py  generic_openai.py  local.py  models_dev.py  ollama.py  openai_compat.py  openai_subscription.py  openrouter.py  rapid_mlx.py  registry.py  vision_allowlist.py
backend/app/rapid_mlx/: manager.py
backend/app/runtime/: __init__.py  checkpoint_runtime.py  events.py  frozen_self_test.py  rewind.py  v11_readiness.py
backend/app/scheduler/: engine.py  executor.py  templates.py
backend/app/schemas/: agent.py  chat.py  goal.py  message.py  session.py
backend/app/scripts/: compare_openrouter_usage.py
backend/app/security/: __init__.py  audit.py  capabilities.py  control.py
backend/app/session/: compaction.py  goal_controller.py  goal_guard.py  goal_manager.py  goal_prompt.py  idempotency.py  input_queue.py  llm.py  loop_detection.py  managed_workspace.py  manager.py  microcompact.py  middleware.py  processor.py  prompt.py  recovery.py  system_prompt.py  task_batch.py  tool_executor.py  upload_gc.py  utils.py
backend/app/skill/: registry.py
backend/app/storage/: checkpoints.py  file_versions.py  migrations.py  workspace_identity.py  workspace_identity_migration.py
backend/app/streaming/: events.py  manager.py
backend/app/tool/: base.py  context.py  execution_workspace.py  file_metadata.py  file_versioning.py  office_contract.py  posix_process.py  registry.py  sandbox.py  sandbox_self_test.py  sandbox_worker.py  subprocess_compat.py  truncation.py  (+3 more)
backend/release_packaging/: __init__.py  office_renderer_stage.py  office_renderer_trust.py  release_identity.py
backend/scripts/: build_windows_arm64_wheelhouse.py  download_node.py  generate_office_template_assets.py  generate_python_licenses.py
backend/tests/: conftest.py  test_backend_localization.py  test_legacy_data.py  test_main_goal_recovery.py  test_main_models_dev_startup.py  test_main_office_runtime_lifecycle.py  test_packaging_contract.py  test_run.py  test_service_singleton_contract.py
desktop-tauri/src-tauri/: Cargo.toml  about.hbs  about.toml  build.linux-arm64.json  build.linux-x64.json  build.macos-aarch64.json  build.windows.json  installer-hooks.nsh  tauri.conf.json  tauri.macos.conf.json
(+707 files in other folders)
