[project]
name = "suxiaoyou"
version = "0.9.0"
description = "Your local AI assistant — private, powerful, personal"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "sse-starlette>=2.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    # Security floor for Uvicorn's command-line dependency (PYSEC-2026-2132).
    "click>=8.3.3",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",

    # LLM client
    "openai>=1.60.0",
    # Native provider adapters are version-pinned because their streaming
    # event schemas are part of the desktop provider contract.
    "anthropic==0.116.0",
    "google-genai==2.11.0",
    "httpx>=0.28.0",
    "websockets>=14.0",

    # Utilities
    "python-ulid>=3.0.0",
    "tiktoken>=0.8.0",
    "aiofiles>=24.1.0",
    # OS-native credential vaults (Keychain, Credential Manager, Secret Service).
    "keyring==25.7.0",
    "qrcode[pil]>=8.0",
    "pyyaml>=6.0",
    "mcp==1.28.1",
    "croniter==6.2.4",
    "wcmatch==11.0",

    # Web content extraction
    "readabilipy==0.3.0",
    "markdownify==1.2.3",

    # Office document reading & creation
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.23",
    "markdown>=3.5",
    "beautifulsoup4>=4.12.0",
    "reportlab>=4.4.0",
    # WeChat media encryption uses cryptography as a fallback. Version 48.0.1
    # retains an official universal2 wheel for Intel and Apple Silicon.
    "cryptography==48.0.1",

    # Data science (used by code_execute)
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
local = ["litellm>=1.55.0"]
office = [
    "pdfplumber>=0.11.0",
]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["app/**"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
