[package]
name = "suxiaoyou-desktop"
version = "0.8.1"
description = "苏小有 — local-first AI agent for desktop work"
license = "Apache-2.0"
edition = "2021"

[lib]
name = "suxiaoyou_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png", "devtools", "linux-libxdo"] }
tauri-plugin-deep-link = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["full"] }
portpicker = "0.1"
log = "0.4"
env_logger = "0.11"
url = "2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }

# Native window vibrancy: NSVisualEffectView on macOS so the sidebar's
# semi-transparent bg reveals a blurred wallpaper instead of the app's
# own surface color.
[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.6"
